# scaling-umbrella

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
aseprites/: Pawn.aseprite
aseprites/Pieces/: Bishop.aseprite  King.aseprite  Knight.aseprite  Queen.aseprite  Rook.aseprite  black_bishop.aseprite  black_king.aseprite  black_knight.aseprite  black_pawn.aseprite  black_queen.aseprite  black_rook.aseprite  black_tile.aseprite  white_bishop.aseprite  white_king.aseprite  white_knight.aseprite  white_pawn.aseprite  white_queen.aseprite  white_rook.aseprite  white_tile.aseprite
aseprites/Tiles/: BlackTile.aseprite  WhiteTile.aseprite
data/: assets.json
data/boards/: PiecesConfig.json
src/: main.cpp
src/Core/: CoreEnums.hpp  CoreStructs.hpp  Engine.cpp  Engine.hpp  GameLogic.cpp  GameLogic.hpp  InputHandler.cpp  InputHandler.hpp  Macros.hpp  Renderer.cpp  Renderer.hpp  TextureManager.cpp  TextureManager.hpp
src/Core/DEBUG/: Logger.cpp  Logger.hpp
src/Core/Graphic/: Renderer.cpp  Renderer.hpp  Sprite.cpp  Sprite.hpp  Texture.cpp  Texture.hpp  TextureManager.cpp  TextureManager.hpp
src/Game/: CommonHeader.hpp  Game.cpp  Game.hpp  GameEnums.hpp  GameObject.cpp  GameObject.hpp
src/Game/BoardStuff/: Board.cpp  Board.hpp  Tile.cpp  Tile.hpp
src/Game/BoardStuff/Pieces/: Piece.cpp  Piece.hpp
src/Graphic/: Renderer.cpp  Renderer.hpp
src/Input/: InputHandler.cpp  InputHandler.hpp
